--- a/webapp/backend/app/templates/createactivity.html
+++ b/webapp/backend/app/templates/createactivity.html
@@ -199,7 +199,7 @@
                                     <div id="titleImageError" style="color: #a94442"></div>
                                 </div>
                         </div>
-                        <input class="btn btn-lg btn-primary btn-block" type="submit" value="提交"></button>
+                        <button class="btn btn-lg btn-primary btn-block" type="submit">提交</button>
                     </form>
                 </div>
             </div>
