--- a/webapp/backend/app/templates/createactivity.html
+++ b/webapp/backend/app/templates/createactivity.html
@@ -73,7 +73,7 @@
                                                     <span class="input-group-addon"><span
                                                             class="glyphicon glyphicon-calendar"></span></span>
                                                 </div>
-                                                <input type="hidden" id="dtp_input3" name="startdate" value="" /><br />
+                                                <input type="hidden" id="dtp_input3" name="startdate" require value="" /><br />
                                             </div>
                                         </div>
                                         <div class='col-sm-6'>
@@ -88,7 +88,7 @@
                                                     <span class="input-group-addon"><span
                                                             class="glyphicon glyphicon-calendar"></span></span>
                                                 </div>
-                                                <input type="hidden" id="dtp_input4" name="enddate" value="" /><br />
+                                                <input type="hidden" id="dtp_input4" name="enddate" require value="" /><br />
                                             </div>
                                         </div>
                                     </div>
@@ -106,7 +106,7 @@
                                                     <span class="input-group-addon"><span
                                                             class="glyphicon glyphicon-time"></span></span>
                                                 </div>
-                                                <input type="hidden" id="dtp_time1" value="" name="starttime"/><br />
+                                                <input type="hidden" id="dtp_time1" value="" require name="starttime"/><br />
                                             </div>
                                         </div>
                                         <div class='col-sm-6'>
@@ -121,7 +121,7 @@
                                                     <span class="input-group-addon"><span
                                                             class="glyphicon glyphicon-time"></span></span>
                                                 </div>
-                                                <input type="hidden" id="dtp_time2" value="" name="endtime"/><br />
+                                                <input type="hidden" id="dtp_time2" value="" require name="endtime"/><br />
                                             </div>
                                         </div>
                                     </div>
