--- a/webapp/backend/app/templates/auth/password_reset_request.html
+++ b/webapp/backend/app/templates/auth/password_reset_request.html
@@ -16,13 +16,16 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../static/img/login/thu1.jpg" class="d-block w-100" alt="...">
+          <img src="../../static/img/login/thvol1.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="../static/img/login/vol1.jpg" class="d-block w-100" alt="...">
+          <img src="../../static/img/login/thvol2.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="../static/img/login/vol2.jpeg" class="d-block w-100" alt="...">
+          <img src="../../static/img/login/thvol3.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="../../static/img/login/thvol4.jpg" class="d-block w-100" alt="...">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
