--- a/webapp/backend/app/templates/myactivity.html
+++ b/webapp/backend/app/templates/myactivity.html
@@ -159,6 +159,7 @@
                                     </div>
                                 </div>
                             </div>
+                            </form>
                         </div>
                         <div class="tab-pane" id="profile{{activity.id}}" role="tabpanel" aria-labelledby="profile-tab">
                             <div class="col-12">
