--- a/webapp/backend/app/templates/base.html
+++ b/webapp/backend/app/templates/base.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="/static/assets/libs/jquery/dist/jquery.min.js"></script>
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="../static/img/myactivity/tsinghua.png">
     <title>志在清华</title>
@@ -191,7 +191,6 @@
     <!-- All Jquery -->
     <!-- ============================================================== -->
     {% block script %}
-    <script src="../static/assets/libs/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap tether Core JavaScript -->
     <script src="../static/assets/libs/popper.js/dist/umd/popper.min.js"></script>
     <script src="../static/assets/libs/bootstrap/dist/js/bootstrap.min.js"></script>
