--- a/webapp/backend/app/templates/auth/login.html
+++ b/webapp/backend/app/templates/auth/login.html
@@ -84,7 +84,7 @@
       </label>
       <a href="{{ url_for('auth.password_reset_request') }}">忘记密码</a>
     </div>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">登陆</button>
+    <button class="btn btn-lg btn-primary btn-block" type="submit" name='submit'>登陆</button>
     <a class="btn btn-lg btn-secondary btn-block" href="{{ url_for('auth.register') }}" role="button">注册</a>
     <p class="mt-5 mb-3 text-muted text-center">&copy; 2019-2029</p>
   </div>
