--- a/webapp/backend/app/templates/qrcode.html
+++ b/webapp/backend/app/templates/qrcode.html
@@ -19,7 +19,7 @@ img{
         <label for="introcode">签到二维码</label>
         <br/>
         <div id='qrcode'></div>
-        <small id="emailHelp" class="form-text text-muted">请注意保管您自己活动的签到码。</small>
+        <small id="emailHelp" class="form-text text-muted">请注意保管您自己活动的签到码，您可以右键点击二维码下载。</small>
       </div>
 
       <p class="mt-5 mb-3 text-muted text-center">&copy; 2019-2029</p>
