--- a/webapp/backend/app/templates/profile.html
+++ b/webapp/backend/app/templates/profile.html
@@ -62,7 +62,7 @@
                                 <div class="col-4"><a href="javascript:void(0)" class="link"><i
                                             class="icon-picture"></i>
                                             已创建活动
-                                        <font class="font-medium">{{team.createdActivities().__len__()+team.creatingActivities().__len__()}}</font>
+                                        <font class="font-medium">{{team.createdActivities().__len__()</font>
                                     </a></div>
                             </div>
                         </center>
