--- a/webapp/backend/app/templates/myactivity.html
+++ b/webapp/backend/app/templates/myactivity.html
@@ -429,7 +429,7 @@
                                     <tr style="cursor:pointer;" onclick="$('#activity{{activity.id}}').modal('toggle')">
                                         <td class=“w-25”>
                                             <div class="card mb-3" style="max-width: 450px;">
-                                                <div class="row no-gutters">
+                                                <div class="row no-gutters" style="align-items: center;">
                                                     <div class="col-md-4">
                                                         <img src="{{activity.thumb}}" class="d-block w-100" alt="...">
                                                     </div>
