--- a/webapp/backend/app/templates/auth/password_reset_request.html
+++ b/webapp/backend/app/templates/auth/password_reset_request.html
@@ -49,7 +49,7 @@
       <input name="email" type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
       <label for="inputEmail">邮箱</label>
     </div>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">重置密码</button>
+    <button class="btn btn-lg btn-primary btn-block" name='submit' type="submit">重置密码</button>
     <a class="btn btn-lg btn-secondary btn-block" href="{{ url_for('auth.register') }}" role="button">注册</a>
     <p class="mt-5 mb-3 text-muted text-center">&copy; 2019-2029</p>
   </div>
