--- a/webapp/backend/app/templates/profile.html
+++ b/webapp/backend/app/templates/profile.html
@@ -123,7 +123,7 @@
                             </div>
                             <div class="form-group">
                                 <div class="col-sm-12">
-                                    <input type="submit" class="btn btn-success" value="更新信息"></button>
+                                    <input type="submit" class="btn btn-success" value="更新信息" name='submit'></button>
                                 </div>
                             </div>
                         </div>
